--- a/public/404.html
+++ b/public/404.html
@@ -5,13 +5,13 @@
     <script>
       // Single Page Apps for GitHub Pages (MIT)
       // https://github.com/rafgraph/spa-github-pages
-      const pathSegmentsToKeep = 1
+      const PATH_SEGMENTS = 1
       const { hash, hostname, pathname, port, protocol, search } = window.location
       window.location.replace(
         protocol
           + '//' + hostname + (port ? ':' + port : '')
-          + pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/'
-          + pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~')
+          + pathname.split('/').slice(0, 1 + PATH_SEGMENTS).join('/') + '/?/'
+          + pathname.slice(1).split('/').slice(PATH_SEGMENTS).join('/').replace(/&/g, '~and~')
           + (search ? '&' + search.slice(1).replace(/&/g, '~and~') : '')
           + hash
       )
